# BaseWebGPU

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  FileManagement.cpp  FileManagement.h  Main.cpp  VertexAttr.h  readme.md  readme.txt  webgpu-utils.cpp  webgpu-utils.h
files/: pyramidGeo.txt  sampleGeo.txt  shader0.wgsl
